# redmine-mcp-server

./: .vercelignore  API_FIELD_TYPES.md  DEPLOY.md  LICENSE  MIGRATION.md  README.md  README.nodejs.md  SUMMARY.md  TOOLS_ROADMAP.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vercel.json
.github/workflows/: .gitignore  publish.yml
api/: mcp.js  mcp.js.bak
api/mcp/: route.js  route.ts
public/: index.html
src/: redmine-client.ts  tools.ts
src/redmine_mcp_server/: __init__.py  server.py
