[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xukaaaa-redmine-mcp"
version = "0.1.3"
description = "MCP Server for Redmine - Manage tasks, log time, update status via Claude/AI assistants"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "xukaaaa", email = "18020331@vnu.edu.vn"}
]
keywords = ["mcp", "redmine", "ai", "claude", "automation", "project-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
redmine-mcp-server = "redmine_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/xukaaaa/redmine-mcp-server"
Repository = "https://github.com/xukaaaa/redmine-mcp-server"
Issues = "https://github.com/xukaaaa/redmine-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/redmine_mcp_server"]
